syntax = "proto3";
package chatter_list;
option go_package = "github.com/dulguunb/chatter-go";


message UserInfo {
    bool isAvailable = 1;
    int64 clientTime = 3;
    int64 serverTime = 4;
    string partner = 5; //TODO: use invite mechanism to fill the partner
    bool terminate = 6;
}

message ListUsersResponse {
    map<string,UserInfo> users = 1;
}

message ListUsersRequest {
    string username = 1;
    int64 clientTime  = 2;
    bool isAvailable = 3;
}

service ListUsersRequestService {
    rpc SendRequest (ListUsersRequest) returns (ListUsersResponse);
}

